manifests/brewz/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongo-initdb
          configMap:
            name: mongo-initdb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: http
  selector:
    app: mongodb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/f5devcentral/spa-demo-app-api:sha-eb52ccf
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa
  template:
    metadata:
      labels:
        app: spa
    spec:
      containers:
        - name: spa
          image: ghcr.io/f5devcentral/spa-demo-app-spa:sha-eb52ccf
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: spa
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: spa

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
    spec:
      containers:
        - name: recommendations
          image: ghcr.io/f5devcentral/spa-demo-app-recommendations:sha-eb52ccf
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: recommendations
spec:
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
      name: http
  selector:
    app: recommendations

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: ghcr.io/f5devcentral/spa-demo-app-inventory:sha-eb52ccf
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP
      name: http
  selector:
    app: inventory
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: ghcr.io/f5devcentral/spa-demo-app-checkout:sha-eb52ccf
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
spec:
  ports:
    - port: 8003
      targetPort: 8003
      protocol: TCP
      name: http
  selector:
    app: checkout

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa-dark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-dark
  template:
    metadata:
      labels:
        app: spa-dark
    spec:
      containers:
        - name: spa-dark
          image: ghcr.io/f5devcentral/spa-demo-app-spa-dark:sha-eb52ccf
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: spa-dark
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: spa-dark
